--- a/index2.html
+++ b/index2.html
@@ -143,7 +143,7 @@
         </div>
     </div>
     <footer>
-        © 2024 Fraud Detection System. All rights reserved.
+        © 2024 Fraud Detection System. Developed By Kadali Shiva, K.Shiva Kumar, G.Nithin.
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script>
