add new comments

--- a/index2.html
+++ b/index2.html
@@ -155,7 +155,7 @@
                 event.preventDefault();
                 var formData = new FormData($(this)[0]);
 
-                // Show spinner and clear previous messages
+                // Show Spinner and clear previous messages
                 $('#train-spinner').show();
                 $('#train-results').empty();
 
